# ReCoDe-Euler-Maruyama

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  tests_workflow.yaml
1-Introduction/: index.html
2-Probability-Distributions/: index.html
3-Euler-Maruyama-Method/: index.html
4-Euler-Maruyama-Class/: index.html
5-Parallel-Euler-Maruyama-Class/: index.html
docs/: 1-Introduction.ipynb  2-Probability-Distributions.ipynb  3-Euler-Maruyama-Method.ipynb  4-Euler-Maruyama-Class.ipynb  4.- Euler-Maruyama class.ipynb  5-Parallel-Euler-Maruyama-Class.ipynb  index.md
notebooks/: 1- Introduction.ipynb  2.- Euler-Maruyama method.ipynb  2.- Probability Distributions.ipynb  3.- Euler-Maruyama method.ipynb  4.- Euler-Maruyama class.ipynb  5.- Parallel Euler-Maruyama class.ipynb
search/: search_index.json
src/euler_maruyama/: __init__.py  coefficients.py  euler_maruyama.py  parallel_euler_maruyama.py  plotting.py
tests/: test_coefficients.py  test_euler_maruyama.py  test_parallel_euler_maruyama.py
